--- a/elements/root/Backend/package.json
+++ b/elements/root/Backend/package.json
@@ -1,10 +1,15 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.13.0",
-    "nodemon": "^3.1.9",
-    "start":"nodemon server.js"
+    "nodemon": "^3.1.9"
   }
 }
